<resources>
    <string name="app_name">JumpUpAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_main_title">JumpUp.Me - Carpooling</string>
    <string name="fragment_main_introduction_text">Enter your trips\nFind trips of other users,
        combine and book them</string>
    <string name="fragment_main_email">eMail</string>
    <string name="fragment_main_login">Login</string>
    <string name="fragment_main_register">Register</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_map_test">Map test</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
