<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_main_title"
        android:id="@+id/txtTitle"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtFragmentMainIntroduction"
        android:text="@string/fragment_main_introduction_text"
        android:layout_below="@+id/txtTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edEMail"
        android:layout_below="@+id/txtFragmentMainIntroduction"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="151dp"
        android:text="@string/fragment_main_email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edPassword"
        android:layout_below="@+id/edEMail"
        android:layout_alignLeft="@+id/edEMail"
        android:layout_alignStart="@+id/edEMail"
        android:layout_marginTop="23dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_login"
        android:id="@+id/btnLogin"
        android:layout_alignTop="@+id/btnRegister"
        android:layout_alignLeft="@+id/txtTitle"
        android:layout_alignStart="@+id/txtTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_main_register"
        android:id="@+id/btnRegister"
        android:textStyle="bold"
        android:layout_below="@+id/edPassword"
        android:layout_alignRight="@+id/txtTitle"
        android:layout_alignEnd="@+id/txtTitle"
        android:layout_marginTop="41dp" />

</RelativeLayout>
